feat(api): add CORS and bearer support; feat(mobile): email OTP login + tasks API client

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -21,6 +21,7 @@
     "react-native-screens": "^3.32.0",
     "expo-haptics": "~13.0.1",
     "expo-av": "~14.0.5",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@adhder/sdk": "workspace:*"
   },
   "devDependencies": {
