feat: complete DDL tasks, notifications, Firebase analytics, and store docs
- Add DDL task UI with due date input and status indicators
- Implement local notifications for DDL task reminders
- Add Firebase Analytics + Crashlytics integration
- Create comprehensive store submission checklist
- Add detailed EAS build and deployment steps
- Update EAS configuration for different environments
- Add notification permissions and plugins to app.json

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -20,6 +20,19 @@
         "backgroundColor": "#ffffff"
       }
     },
+    "notification": {
+      "icon": "./assets/notification-icon.png",
+      "color": "#ffffff"
+    },
+    "plugins": [
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/notification-icon.png",
+          "color": "#ffffff"
+        }
+      ]
+    ],
     "web": {
       "bundler": "metro"
     }
