--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -24,6 +24,10 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "expo-media-library": "~16.0.3",
     "expo-file-system": "~16.0.6",
+    "expo-notifications": "~0.28.0",
+    "@react-native-firebase/app": "^20.4.0",
+    "@react-native-firebase/analytics": "^20.4.0",
+    "@react-native-firebase/crashlytics": "^20.4.0",
     "@adhder/sdk": "workspace:*"
   },
   "devDependencies": {
