--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start -p 3000",
     "lint": "next lint",
-    "typecheck": "tsc -p tsconfig.json --noEmit"
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "@adhder/sdk": "workspace:*",
-    "@adhder/db": "workspace:*",
+    "@prisma/client": "^5.22.0",
     "jsonwebtoken": "^9.0.2",
     "resend": "^4.0.1"
   },
@@ -23,6 +23,7 @@
     "@types/react": "^18.3.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
+    "prisma": "^5.22.0",
     "typescript": "^5.6.2"
   }
 }
