--- a/railway-deploy/package.json
+++ b/railway-deploy/package.json
@@ -19,6 +19,7 @@
     "resend": "^4.0.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
     "@types/react": "^18.3.5",
     "eslint": "^8.57.0",
