feat: update mobile app API base URL to Render deployment
- Update EAS build configs to use https://adhder.onrender.com
- Configure preview and production builds to connect to deployed backend
- Ready for mobile app testing and store submission

--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -16,7 +16,7 @@
         "simulator": true
       },
       "env": {
-        "EXPO_PUBLIC_API_BASE": "https://your-api-domain.vercel.app"
+        "EXPO_PUBLIC_API_BASE": "https://adhder.onrender.com"
       }
     },
     "production": {
@@ -28,7 +28,7 @@
         "autoIncrement": true
       },
       "env": {
-        "EXPO_PUBLIC_API_BASE": "https://your-api-domain.vercel.app"
+        "EXPO_PUBLIC_API_BASE": "https://adhder.onrender.com"
       }
     }
   },
