--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -20,7 +20,7 @@
       }
     },
     "production": {
-      "autoIncrement": "version",
+      "autoIncrement": true,
       "ios": {
         "autoIncrement": true
       },
