fix: remove Firebase dependency to resolve build failures
- Remove Firebase Analytics and Crashlytics dependencies
- Remove dummy google-services.json and GoogleService-Info.plist
- Replace with console-based analytics (can be upgraded later)
- Fix Android build issues caused by invalid Firebase config

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -13,7 +13,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.adhder.app"
+      "bundleIdentifier": "com.adhder.app",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -37,8 +40,11 @@
     ],
     "web": {
       "bundler": "metro"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "c4dbc047-3256-44ce-830a-a2bb9604c9e9"
+      }
     }
   }
 }
-
-
