--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -8,7 +8,7 @@
       "developmentClient": true,
       "distribution": "internal",
       "env": {
-        "EXPO_PUBLIC_API_BASE": "http://172.29.2.102:3000"
+        "EXPO_PUBLIC_API_BASE": "https://adhder.onrender.com"
       }
     },
     "preview": {
